Trimmed off outdated files. Copy, code and whitespace tweaks.
Working on Ubuntu 10.4 LTS (lucid).

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ graft prototype-html
 include MANIFEST.in
 include gdmodule-0.51.diff
 include bets* biotech*
-include ChangeLog NEWS todo.txt README.txt
+include ChangeLog NEWS todo.txt README.md
 include longview.py
-include BSD-LICENSE.txt
+include LICENSE.txt
 
